--- a/src/styles/_modal.scss
+++ b/src/styles/_modal.scss
@@ -119,7 +119,7 @@
   justify-content: center;
   align-items: center;
   padding-inline: 10px 15px;
-  background-color: rgba(0, 0, 0, 0.3);
+    background-color: var(--chooser-bg-color);
   border-radius: 10px;
   gap: 10px;
   transition: background-color 0.1s;
@@ -130,7 +130,7 @@
   }
 
   &.active {
-    background-color: var(--button-bg-lighter-color);
+    background-color: var(--transparent-bg-color);
   }
 }
 
