--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -62,7 +62,7 @@
 
     &.active,
     &:hover {
-      background-color: rgba(0, 0, 0, 0.3);
+      background-color: var(--transparent-bg-color);
     }
   }
 
@@ -90,7 +90,7 @@
 
   &.active,
   &:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: var(--transparent-bg-color);
   }
 }
 
@@ -118,7 +118,7 @@
 
   &.active,
   &:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: var(--transparent-bg-color);
   }
 }
 
@@ -193,7 +193,7 @@
 
   &:hover,
   &.active {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: var(--transparent-bg-color);
     cursor: pointer;
   }
 }
