--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -7,6 +7,7 @@
   --support-color: black;
   --main-background-color: white;
   --secondary-background-color: #f6f8fa;
+  --chooser-bg-color: #f6f8fa;
   --support-background-color: #efefef;
   --blank-cell-color: #efefef;
   --cell-shadow-color: transparent;
@@ -22,6 +23,7 @@
   --registration-field-active-bg-color: #88cd6f;
   --registration-field-bg-color: #8ec07c;
   --cell-border-color: rgba(0, 0, 0, 0.7);
+  --transparent-bg-color: rgba(0, 0, 0, 0.2);
   --button-text-color: #f9faf8;
   --button-bg-color: #bbb;
   --button-bg-lighter-color: #ddd;
@@ -39,6 +41,7 @@
   --support-color: white;
   --main-background-color: #2d3333;
   --secondary-background-color: #22272e;
+  --chooser-bg-color: #444;
   --support-background-color: #1c2128;
   --blank-cell-color: #242424;
   --cell-shadow-color: #3c3c3c;
@@ -54,6 +57,7 @@
   --registration-field-active-bg-color: #009ba2;
   --registration-field-bg-color: #2d3333;
   --cell-border-color: rgba(255, 255, 255, 0.7);
+  --transparent-bg-color: rgba(0, 0, 0, 0.3);
   --button-text-color: #f9faf8;
   --button-bg-color: #545454;
   --button-bg-lighter-color: #777;
